# rustpass

./: .editorconfig  .rustfmt.toml  .travis.yml  Cargo.toml
.cargo/: config.toml
.github/workflows/: cross-compile.yml  rust.yml
benches/: bench_database_v31.rs  bench_database_v4.rs
ci/: build.sh  install.sh  prepare.sh  prepare_build.sh  prepare_install.sh  tool.sh
examples/: kdbx-decrypted.xml  keyfile.xml
src/: lib.rs  xml_parse.rs
src/api/: header.rs  kdb.rs  kdbx3.rs  kdbx4.rs  mod.rs  settings.rs  traits.rs
src/api/compression/: mod.rs
src/api/suites/: inner_cipher.rs  kdf_settings.rs  mod.rs  outer_cipher.rs
src/database/: kdb.rs  kdbx3.rs  kdbx4.rs  mod.rs  utils.rs
src/database/items/: autotype.rs  deleted.rs  entry.rs  group.rs  history.rs  mod.rs  node.rs  notes.rs  times.rs
src/database/items/metadata/: binary_struct.rs  memory_protection_struct.rs  meta_struct.rs  mod.rs
src/database/items/values/: base64_value.rs  color_value.rs  icon_value.rs  mod.rs  string_value.rs  timestamp_value.rs  uuid_value.rs
src/errors/: crypto.rs  database.rs  mod.rs
src/internal/: keyfile.rs  mod.rs  random.rs  traits.rs
src/internal/compression/: decompress.rs  mod.rs
src/internal/cryptopraphy/: mod.rs
src/internal/cryptopraphy/cipher/: aes256.rs  chacha20.rs  mod.rs  plain.rs  salsa20.rs
src/internal/cryptopraphy/kdf/: aeskdf.rs  argon2.rs  mod.rs
src/internal/database/: mod.rs
src/internal/database/binary/: constants.rs  mod.rs  structure.rs  version.rs
src/internal/database/binary/header/: block.rs  constants.rs  kdb.rs  kdbx3.rs  kdbx4.rs  mod.rs
src/internal/database/binary/payload/: block.rs  mod.rs
src/internal/database/xml/: mod.rs  parser.rs  writer.rs
src/internal/primitives/: mod.rs  variant_dictionary.rs
src/internal/primitives/compression/: compress.rs  decompress.rs  mod.rs
src/internal/primitives/cryptopraphy/: hash.rs  hmac.rs  mod.rs
src/internal/primitives/cryptopraphy/cipher/: aes256.rs  chacha20.rs  mod.rs  plain.rs  salsa20.rs  twofish.rs
src/internal/primitives/cryptopraphy/kdf/: aeskdf.rs  argon2.rs  mod.rs
src/internal/structures/: variant_dictionary.rs
src/internal/suites/: hmac_block_stream.rs  inner_cipher.rs  kdf_settings.rs  mod.rs  outer_cipher.rs
tests/: test_database_v31.rs  test_database_v4.rs
tests/fixture/: empty-aes256-aeskdf-v4.kdbx  empty-aes256-argon2-v4.kdbx  empty-chacha20-aeskdf-v4.kdbx  empty-chacha20-aeskdf-v4.key  empty-chacha20-aeskdf-v4.old.kdbx  empty-twofish-aeskdf-v4.kdbx  empty-twofish-argon2-v4.kdbx  simple.kdbx
