[package]
name = "rustpass"
description = "KeePass(X) KDB KDBX3 KDBX4 "

version = "0.0.2"
authors = ["<wizzk42@gmail.com>"]
license = "MIT"
edition = "2018"

[features]
default = ["use_native"]

use_native = [
    "aes",
    "block-modes",
    "cipher",
    "chacha20",
    "hmac",
    "sha2",
    "stream-cipher",
]
use_openssl = ["openssl"]

[dependencies.base64]
version = "~0.13.0"

[dependencies.bytes]
version = "~1.0.0"

[dependencies.byteorder]
version = "~1.3.4"

[dependencies.chrono]
version = "~0.4.19"

[dependencies.extfmt]
version = "~0.1.1"

[dependencies.flate2]
version = "~1"

[dependencies.hex]
version = "~0.4.2"

[dependencies.hex-literal]
version = "0.3.1"

[dependencies.rust-argon2]
version = "~0.8.3"

[dependencies.salsa20]
version = "0.7.2"

[dependencies.secstr]
version = "~0.4.0"

[dependencies.twofish]
version = "0.5.0"

[dependencies.uuid]
version = "~0.8.1"
features = ["v1", "v3", "v4", "v5"]

[dependencies.xml-rs]
version = "~0.8.3"

[dependencies.cfg-if]
version = "1.0.0"


# --------------------------------------------
#  feature: !use-openssl

[dependencies.aes]
version = "0.6.0"
optional = true

[dependencies.block-modes]
version = "0.7.0"
optional = true

[dependencies.cipher]
version = "0.2.5"
optional = true

[dependencies.chacha20]
version = "0.6.0"
optional = true

[dependencies.hmac]
version = "0.10.1"
optional = true

[dependencies.sha2]
version = "0.9.2"
optional = true

[dependencies.stream-cipher]
version = "0.99.99"
optional = true


# --------------------------------------------
#  feature: use-openssl

[dependencies.openssl]
version = "0.10.32"
optional = true


# --------------------------------------------
#  dev dependencies

[dev-dependencies.spectral]
version = "0.6.0"

[dev-dependencies.static_assertions]
version = "1.1.0"

[dev-dependencies.pretty_assertions] 
version = "0.6.1"
